# Vietnamese-Law-Look-up-and-Advising-System

./: .gitignore  README.md  docker-compose.yaml  main.tex  package-lock.json  package.json  presentation.txt  pyproject.toml
backend/: Dockerfile  __init__.py  main.py  requirements.txt
backend/api/: deps.py
backend/api/v1/: auth.py  chat.py  lookup.py  sessions.py
backend/core/: config.py  database.py  security.py
backend/db/: base.py
backend/db/models/: __init__.py  chat_session.py  message.py  message_source.py  user.py
backend/models/: auth.py  chat.py  lookup.py  session.py
backend/services/: auth_service.py  chat_service.py  lookup_service.py  session_service.py
backend/services/pipelines/: __init__.py  base.py  (+4 more)
benchmarks/: README.md  __init__.py  config.py  dataset.py  deepeval_config.py  deepeval_dataset.py  deepeval_evaluator.py  evaluator.py  ingest.py  metrics.py  pipeline_adapter.py  results.py  retriever.py  run_deepeval.py  run_eval.py
benchmarks/embeddings/: __init__.py  base.py  bge_m3.py  gte.py  vietnamese.py
benchmarks/results/: .gitkeep  gte_dense.json  gte_hybrid.json  gte_sparse.json  vietnamese_dense.json  vietnamese_dense_reranker_gte_k_10.json  vietnamese_dense_reranker_gte_k_20.json  vietnamese_hybrid.json  vietnamese_sparse.json
frontend/: DOCKERFILE  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  ui.tsx
law_crawler/: README.md  config.py  main.py
preprocess/: README.md  chunk_pipeline.py  chunker.py  ingest_data.py  ingest_data_vietnamese.py  requirements.txt
tests/: test_main.py
(+17 files in other folders)
