[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "google-genai>=1.56.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.2",
    "FlagEmbedding>=1.2.0",
    "deepeval>=2.0.0",
    "langgraph>=0.2.0",
]
